[package]
name = "index-bench"
version = "0.1.0"
edition = "2024"

[features]
stat = ["arctic/stat"]
opt-node3-get = ["arctic/opt-node3-get"]
opt-node15-get = ["arctic/opt-node15-get"]
opt = ["opt-node3-get", "opt-node15-get"]

[dependencies]
anyhow = "1.0.99"
concurrent-map = "5.0.37"
crossbeam-skiplist = "0.1.3"
hwlocality = "1.0.0-alpha.10"
libc = "0.2.175"
log = "0.4.27"
perf-event2 = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ycsb = { git = "https://github.com/nwtnni/ycsb.git", features = ["cartesian", "serde"] }
arctic = { git = "ssh://github.com/nwtnni/arctic" }
cartesian = { git = "https://github.com/nwtnni/cartesian.git" }
toml = "0.9.5"
scc = "3.0.2"
rapidhash = "4.0.0"
rand = "0.9.2"
papaya = "0.2.3"
bztree = "0.2.0"
crossbeam-epoch = "0.9.18"
bitflags = "2.9.4"
congee = "0.4.1"

# https://github.com/kaist-cp/smr-benchmark/blob/00b4e4d06d9b91f289b4644163f0cac0660d4af7/Cargo.toml#L42-L45
[dependencies.crossbeam-ebr]
package = "crossbeam-epoch"
git = "https://github.com/kaist-cp/crossbeam"
branch = "smr-benchmark"

# [features]
# default = []
# stat = ["art/stat"]
