[package]
name = "index-bench"
version = "0.1.0"
edition = "2024"
default-run = "coordinator"

[features]
default = []
stat = ["arctic/stat"]
stat-latency = ["dep:base64", "dep:hdrhistogram"]
stat-garbage = ["arctic/stat-garbage"]

smr-disable = ["arctic/smr-disable"]
smr-epoch = ["arctic/smr-epoch"]
smr-seize = ["arctic/smr-seize"]

membarrier = ["arctic/opt-membarrier"]

opt-0 = ["opt-1", "arctic/opt-no-path"]
opt-1 = ["opt-2", "arctic/opt-no-int", "arctic/opt-no-expand"]
opt-2 = ["arctic/opt-no-node3-get", "arctic/opt-no-node3-iter", "arctic/opt-no-node15-get", "arctic/opt-no-node15-iter", "arctic/opt-no-node47-iter"]
opt-3 = []
opt-4 = ["membarrier"]

[dependencies]
anyhow = "1.0.99"
art-sys = { path = "extern/ARTSynchronized/art-sys" }
base64 = { version = "0.22.1", optional = true }
# concurrent-map = "5.0.37"
# crossbeam-skiplist = "0.1.3"
hdrhistogram = { version = "7.5.4", optional = true, default-features = false, features = ["serialization"] }
hwlocality = "1.0.0-alpha.10"
libc = "0.2.176"
log = "0.4.27"
perf-event2 = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ycsb = { git = "https://github.com/nwtnni/ycsb.git", features = ["cartesian", "serde"] }
arctic = { git = "https://github.com/nwtnni/arctic.git", default-features = false }
cartesian = { git = "https://github.com/nwtnni/cartesian.git" }
toml = "0.9.5"
# scc = "3.0.2"
rapidhash = "4.0.0"
rand = "0.9.2"
# papaya = "0.2.3"
# bztree = "0.2.0"
bitflags = "2.9.4"
# congee = "0.4.1"
# contrie = "0.1.4"
dashmap = "6.1.0"
# bplustree = "0.1.0"
mimalloc = { path = "extern/mimalloc_rust", features = ["v3"] }
wormhole-sys = { path = "extern/wormhole/wormhole-sys" }
fbtree-sys = { path = "extern/IndexResearch/fbtree-sys" }
uuid = { version = "1.23.1", default-features = false, features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
